fix default index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Hello, World</title>
+    <meta charset="UTF-8">
+    <title>蘑菇城堡</title>
+
+    <style type="text/css">
+        #main {
+            margin: 0 auto;
+            width: 600px;
+        }
+
+        a {
+            font-size: 60%;
+            text-decoration: none;
+        }
+    </style>
 </head>
 
 <body>
-Hello, World
+
+
+    <div id="main">
+        <h1>蘑菇城堡</h1>
+        <p></p>
+        <p></p>
+        <p>一个简单的个人网站</p>
+
+
+        <div>
+            <a href="http://www.miitbeian.gov.cn/" target="_blank">冀ICP备15003043号</a>
+        </div>
+    </div>
 </body>
 
 </html>
